[JSDK-18] Simple logger with sensitive headers masking (#55)
* small refactor

* gradle file cleanup

* defined simple logger

* cleanup

* removed okhttp loggin intereceptor dependency and related changes

* re-enabling acceptance tests on pre tags

* simplified serialization for Header instances

* column replaced

* test for request invalid

* formatting

* tynilog config changes

* cleanup